test/Fail/Erased-record-4.agda
{-# OPTIONS --erasure #-}

record @0 R : Set₁ where
  field
    x : Set

_ : Set₁
_ = R
